--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+
+logging.level.root=INFO
+
+
+# Spotify Config
+spotify.client-id=96faf0542a934748ab800dae8f474e70
+spotify.client-secret=733b84a9c4684700975cf41b99964b55
+spotify.authorization.redirectURL=http://localhost:8080/index/responseFromSpotify
+
+# HTTP Client pool config
+portal.http-client.pool.size=25
+portal.http-client.timeout.seconds=10
