some design changes and delete implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.datasource.url = jdbc:postgresql://free-tier5.gcp-europe-west1.cockroachl
 spring.datasource.username = markokrajceski
 spring.datasource.password = X7TkoKn9WDPQuK-IMjV8Zg
 
+spring.mvc.hiddenmethod.filter.enabled: true
+
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -29,3 +31,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.error.whitelabel.enabled=false
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+#server.error.path=/error
