design files fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.url = jdbc:postgresql://free-tier5.gcp-europe-west1.cockroachl
 spring.datasource.username = markokrajceski
 spring.datasource.password = X7TkoKn9WDPQuK-IMjV8Zg
 
-spring.mvc.hiddenmethod.filter.enabled: true
+spring.mvc.hiddenmethod.filter.enabled=true
 
 
 ## default connection pool
